Правки к первой проверке

--- a/source/index.html
+++ b/source/index.html
@@ -131,7 +131,7 @@
           <div class="questions__agreement-block">
             <input type="submit" name="submit" value="Задать вопрос">
             <div class="questions__agreement-checkbox">
-              <input type="checkbox" id="agree">
+              <input class="questions__agreement-checkbox-input" type="checkbox" id="agree">
               <label for="agree">Я согласен на обработку<br> персональных данных</label>
             </div>
           </div>
@@ -233,7 +233,7 @@
     <textarea id="popup-question" name="question" placeholder="Ваш вопрос" required></textarea>
     <input type="submit" form="popup-form">
     <div class="popup-form__agreement-checkbox">
-      <input class="visually-hidden" id="popup-agree" type="checkbox" required>
+      <input class="popup-from__agreement-checkbox-input visually-hidden" id="popup-agree" type="checkbox" required>
       <label for="popup-agree">Я согласен на обработку персональных данных</label>
     </div>
   </form>
