--- a/source/index.html
+++ b/source/index.html
@@ -236,7 +236,7 @@
         <textarea id="popup-question" name="question" placeholder="Ваш вопрос" required></textarea>
         <input type="submit" form="popup-form">
         <div class="form__agreement-checkbox popup-form__agreement-checkbox">
-          <input class="form__agreement-checkbox-input visually-hidden" id="popup-agree" type="checkbox" required>
+          <input class="form__agreement-checkbox-input form__agreement-checkbox-input--popup visually-hidden" id="popup-agree" type="checkbox" required>
           <label for="popup-agree">Я согласен на обработку персональных данных</label>
         </div>
       </form>
